# QHotkey

./: CMakeLists.txt  QHotkey.pro  README.md  qhotkey.prc  qhotkey.pri  qpm.json  qpmx.json
.github/workflows/: build.yml
HotkeyTest/: CMakeLists.txt  HotkeyTest.pro  hottestwidget.cpp  hottestwidget.h  hottestwidget.ui  main.cpp
QHotkey/: QHotkey.pro  qhotkey.cpp  qhotkey.h  qhotkey.pri  qhotkey_mac.cpp  qhotkey_p.h  qhotkey_win.cpp  qhotkey_x11.cpp
doc/: qhotkey.dox  qhotkey.doxy
